--- a/apps/i2psnark/locale/messages_ru.po
+++ b/apps/i2psnark/locale/messages_ru.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: I2P i2psnark\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-14 03:19+0000\n"
-"PO-Revision-Date: 2009-12-14 19:58+0000\n"
+"PO-Revision-Date: 2009-12-20 07:03+0000\n"
 "Last-Translator: 4get <forget@mail.i2p>\n"
 "Language-Team: foo <foo@bar>\n"
 "MIME-Version: 1.0\n"
@@ -500,19 +500,19 @@ msgstr "Сид"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:698
 msgid "Uninteresting (The peer has no pieces we need)"
-msgstr "Uninteresting (У пира нет нужных нам частей)"
+msgstr "Uninteresting (У пира нет нужных нам частей торрента)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:700
 msgid "Choked (The peer is not allowing us to request pieces)"
-msgstr "Choked (Этот пир не позволяет нам запрашивать части)"
+msgstr "Choked (Этот пир не позволяет нам запрашивать части торрента)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:714
 msgid "Uninterested (We have no pieces the peer needs)"
-msgstr "Uninterested (У нас нужных этому пиру частей)"
+msgstr "Uninterested (У нас нужных этому пиру частей торрента)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:716
 msgid "Choking (We are not allowing the peer to request pieces)"
-msgstr "Choking (Мы не позволяем этому пиру запрашивать у нас части)"
+msgstr "Choking (Мы не позволяем этому пиру запрашивать у нас части торрента)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:742
 msgid "Add Torrent"
@@ -639,7 +639,7 @@ msgstr "Получен торрент из: {0}"
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:994
 #, java-format
 msgid "Torrent at {0} was not valid"
-msgstr "Торрент полученный с адреса {0} некорректен"
+msgstr "Торрент полученный из {0} некорректен"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:999
 #, java-format
