* Tunnels:       - Do RED dropping before the IBGW fragmenter, not after       - Change batch time to 250ms for IBGWs (was 100ms)       - Change batch time to 150ms for exploratory OBGWs (was 100ms)       - Start a new message in the fragmenter if almost full       - Fix a major, longstanding synchronization bug in the FragmentHandler         which led to corrupt messages at the endpoints       - More cleanups and comments
Monotone-Parent: d96ad02a3bc5bd08a2305c73b0937dee5e1a4353
Monotone-Revision: 69adc27abd495ec76767747586123f452fdbd18c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-22T15:08:10
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2009-12-22 zzz
+    * Tunnels:
+      - Do RED dropping before the IBGW fragmenter, not after
+      - Change batch time to 250ms for IBGWs (was 100ms)
+      - Change batch time to 150ms for exploratory OBGWs (was 100ms)
+      - Start a new message in the fragmenter if almost full
+      - Fix a major, longstanding synchronization bug in the FragmentHandler
+        which led to corrupt messages at the endpoints
+      - More cleanups and comments
+
 2009-12-20 zzz
     * Console:
       - Fix status to show a disconnected network error rather than
