--- a/apps/i2psnark/locale/messages_zh.po
+++ b/apps/i2psnark/locale/messages_zh.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: I2P i2psnark\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-18 06:45+0000\n"
-"PO-Revision-Date: 2009-12-18 15:57+0800\n"
+"PO-Revision-Date: 2009-12-27 10:47+0800\n"
 "Last-Translator: walking <zhazhenzhong@gmail.com>\n"
 "Language-Team: foo <foo@bar>\n"
 "MIME-Version: 1.0\n"
@@ -499,19 +499,19 @@ msgstr "种子"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:698
 msgid "Uninteresting (The peer has no pieces we need)"
-msgstr ""
+msgstr "无需要部分"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:700
 msgid "Choked (The peer is not allowing us to request pieces)"
-msgstr ""
+msgstr "拒绝请求"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:714
 msgid "Uninterested (We have no pieces the peer needs)"
-msgstr ""
+msgstr "无需要部分"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:716
 msgid "Choking (We are not allowing the peer to request pieces)"
-msgstr ""
+msgstr "拒绝请求"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:743
 msgid "Add Torrent"
