Added a target to generate a stand-alone BOB jar file.
Monotone-Parent: a40037ecb08148d44e1d05467e2893880ba171a8
Monotone-Revision: a867e3e7198753ff6db6fbe2ccaf7f2b8d839de8

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-01T21:28:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-01-01 sponge
+    * Happy New year everyone!
+    * Added a target to generate a stand-alone BOB jar file.
+
 2009-12-31 zzz
     * BuildResponseRecord: Make static
     * i2np: Remove unused logs
