Fix build.xml target for justBOB and fix Main build.xml so that it actually deletes backup files and add a few extra types that should be commonly needed... atleast by me.
Monotone-Parent: bd7ba5478cd9c1cd0140c1b410e2fae4956fe89a
Monotone-Revision: 4bcfc7b30a82841bfc199916509fec7e13f21247

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-02T14:34:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2010-01-02 sponge
+    * Fix build.xml target for justBOB
+    * Fix Main build.xml so that it actually deletes backup files and add a
+      few extra types that should be commonly needed... atleast by me.
+
 2010-01-02 zzz
     * Console: Save refresh setting
     * i2psnark:
