--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
 2010-01-02 sponge
+    * Fix NB 6.8 goofyness... 'till ant 1.7.1 or > is needed, stay with NB
+	6.5, as the newer ones place a check for 1.7.1. We require 1.7.0
+
+2010-01-02 sponge
     * Fix build.xml target for justBOB
     * Fix Main build.xml so that it actually deletes backup files and add a
       few extra types that should be commonly needed... atleast by me.
