Fix one last stupid mistake in build.xml, my fault.
Monotone-Parent: 5896779cfea73a131e624e6d065d2caa206f8c48
Monotone-Revision: 7f8a9c3df704231f6d9b9b36222d296d1d02f9aa

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-02T22:58:50
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 2010-01-02 sponge
+    * Fix one last stupid mistake in build.xml, my fault.
+
+2010-01-02 sponge
     * Fix NB 6.8 goofyness... 'till ant 1.7.1 or > is needed, stay with NB
 	6.5, as the newer ones place a check for 1.7.1. We require 1.7.0
 
