Insert reverse connection ability into the http server code so that seedless can start to get worked on. It's disabled by default.
Monotone-Parent: 8dfddbd5818309c8db9434a91b4cfdbb1b79189b
Monotone-Revision: 1f636df6ff10db350d6b020b2e06daf842fb23e1

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-10T11:23:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-01-10 sponge
+    * Insert reverse connection ability into the http server code so that
+      seedless can start to get worked on. It's disabled by default.
+
 2010-01-09 zzz
     * Include new eepsite indexes in pkg
 
