Clean up reverse connection ability, remove some annoyingly redundent code. Place all settings in the console. It works!
Monotone-Parent: 6f7b7257c342400899d2ba2f046d6ee853b316dc
Monotone-Revision: 5a4cfae2d29e2cd61c56fb01c61e5ce4e769c575

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-14T05:45:01
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-01-14 sponge
+    * Clean up reverse connection ability, remove some annoyingly redundent
+      code. Place all settings in the console. It works!
+
 2010-01-10 sponge
     * Insert reverse connection ability into the http server code so that
       seedless can start to get worked on. It's disabled by default.
