Fully clean up I2PTunnel. No more lint issues, should compile 100% clean. Dropped unused class BufferLogger from I2PTunnel as it is not used anylonger.
Monotone-Parent: 5a4cfae2d29e2cd61c56fb01c61e5ce4e769c575
Monotone-Revision: fb38016f22528778128e22269b8f256c8c640466

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-15T03:32:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
 2010-01-14 sponge
+    * Fully clean up I2PTunnel. No more lint issues, should compile 100%
+      clean.
+    * Dropped unused class BufferLogger from I2PTunnel as it is not used
+      anylonger.
+
+2010-01-14 sponge
     * Clean up reverse connection ability, remove some annoyingly redundent
       code. Place all settings in the console. It works!
 
