--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,28 @@
+2010-01-17 zzz
+    * Clock: Change a CRIT to an ERROR, lower threshold for changing from 10s to 5s
+    * configclients.jsp: Support add, delete, edit
+    * I2CP: Clean up resources on 5-minute leaseset timeout at startup
+    * LeaseSet generation: Increment the lease date slightly, to force
+      the floodfill to flood it when it changes
+    * NetDb Lookups: Don't try to send a RI lookup to itself through a zero-hop tunnel
+    * NetDb Stores and Verifies:
+      - Do LS stores and verifies through client tunnels
+        to prevent correlation by the OBEP or FF
+      - Encrypt LS stores to prevent snooping by the OBEP,
+        if the floodfill supports it
+      - Encrypt LS and RI verifies to prevent snooping by the OBEP
+      - Extend verify delay and timeout
+      - Reenable RI verifies
+      - Disallow simultaneous verifies for the same key
+      - Don't resend on verify timeout; try a different peer instead
+      - Don't resend to same peer on verify fail, try a different one
+      - Adjust ff selection criteria
+      - Flood even if received garlic-encrypted
+    * Profiles: Limit fast peers to 30 max
+    * SSLEepGet: New
+    * Tunnels: Prevent more than one zero-hop tunnel in a lease
+    * VersionComparator: Move from TrustedUpdate.java to util
+
 2010-01-14 sponge
     * Fully clean up I2PTunnel. No more lint issues, should compile 100%
       clean.
