Save graph settings when changed
Monotone-Parent: 524e1712522ece93c011f6da4bb7d01edb8c2718
Monotone-Revision: c252e7e40bf6365b455eebff11c68a1db74a167c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-18T17:39:12
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2010-01-18 zzz
+    * configclients.jsp: Fix add-new-client feature
+    * Console: Add a tunnel share ratio estimate
+    * graphs.jsp:
+      - Remove jrobin sig
+      - Set lower limit to 0
+      - Save settings when changed
+    * Reseed: Support SSL and proxies
+    * Translate: Catch empty string
+
 2010-01-17 zzz
     * Clock: Change a CRIT to an ERROR, lower threshold for changing from 10s to 5s
     * configclients.jsp: Support add, delete, edit
