* Firewall fix for NTCP, where firewalls will forget a NAT relationship       on a stream... AKA setting keepalive. This should fix the stuck NTCP       issue that has been bothing zzz for years.     * Set keepalive on BOB connections too, since this will assist closing       the connections in the event of a crash on a client.
Monotone-Parent: 749c71bd9e3f4c98f81f0e72b561d1867e6f6e23
Monotone-Revision: efdeefc134243f15d893f98dcbe275657fcc807a

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-19T08:54:40
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2010-01-19 sponge
+    * Firewall fix for NTCP, where firewalls will forget a NAT relationship
+      on a stream... AKA setting keepalive. This should fix the stuck NTCP
+      issue that has been bothing zzz for years.
+    * Set keepalive on BOB connections too, since this will assist closing
+      the connections in the event of a crash on a client.
+
 2010-01-18 zzz
     * configclients.jsp: Fix add-new-client feature
     * Console: Add a tunnel share ratio estimate
