Add a note to history.txt re eespite changes.
Monotone-Parent: 083592a7f47d8287c75e35d44859280a2a6815bb
Monotone-Revision: 90db43397b17953c57eeba7c8183baac02ced2ec

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-01-21T08:00:37
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-01-21 dr|z3d
+    * New eepsite structure and enhanced pages. Now with graphics and stuff!
+
 2010-01-19 sponge
     * Firewall fix for NTCP, where firewalls will forget a NAT relationship
       on a stream... AKA setting keepalive. This should fix the stuck NTCP
